Updated Docker yml file for COmpose

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,5 +15,8 @@ jobs:
     - name: Build Docker image
       run: docker build -t devops-app .
 
+    - name: Docker Compose 
+      run: docker compose up -d
+
     - name: Run container
       run: docker run -d -p 3000:3000 devops-app
