--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,6 +15,8 @@ jobs:
     - name: Build Docker image
       run: docker build -t devops-app .
 
-
+    - name: Push Docker image
+      run: docker push devops-app
+      
     - name: Run container
       run: docker run -d -p 3000:3000 devops-app
